--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <h1>Welcome to the to-do list Application</h1>
 <p> Adding a paragraph tag. </p>
 <b> My name is Tanuka Nayak </b>
+
+
+
+
+
+<i> PS: I have not added the html format like head, title and body. I'm just playing around with basic tags.</i> 
