--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <h1>Welcome to the to-do list Application</h1>
-<p> Adding a paragraph tag. </p>
+<p> Adding a paragraph tag. </p><br>
 <b> My name is Tanuka Nayak </b>
-
+<p> This is my last semester in NJIT as I will be graduating in December 2017. Hoping to learn a good amount of PHP from this subject as I have never learnt it. To
+join my professional network, you can coonect with me on <a href = "https://www.linkedin.com/in/tanuka-nayak/">LinkedIn</a></p>
 
 
 
