--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <p> This is my last semester in NJIT as I will be graduating in December 2017. Hoping to learn a good amount of PHP from this subject as I have never learnt it. To
 join my professional network, you can coonect with me on <a href = "https://www.linkedin.com/in/tanuka-nayak/">LinkedIn</a></p>
 
+Soon going to be a proud alumni, I welcome all the new highlanders to the Fall 2017 semester.<br><br>
+<img src = "http://clubs.njit.edu/afsa/images/pics02.jpg" height="300" width="700" align="left-center">
 
-
-
+<br>
 <i> PS: I have not added the html format like head, title and body. I'm just playing around with basic tags.</i> 
